--- a/auth.html
+++ b/auth.html
@@ -219,7 +219,7 @@
             signInWithEmailAndPassword(auth, email, password)
                 .then((userCredential) => {
                     // Login successful, redirect to dashboard
-                    window.location.href = 'untitled.html'; // Yahaan apni main file ka naam daalein
+                    window.location.href = 'index.html'; // Yahaan apni main file ka naam daalein
                 })
                 .catch((error) => {
                     errorLogin.textContent = getErrorMessage(error.code);
@@ -244,7 +244,7 @@
             createUserWithEmailAndPassword(auth, email, password)
                 .then((userCredential) => {
                     // Signup successful, redirect to dashboard
-                    window.location.href = 'untitled.html'; // Yahaan apni main file ka naam daalein
+                    window.location.href = 'index.html'; // Yahaan apni main file ka naam daalein
                 })
                 .catch((error) => {
                     errorSignup.textContent = getErrorMessage(error.code);
@@ -273,4 +273,5 @@
         }
     </script>
 </body>
+
 </html>
