--- a/index.html
+++ b/index.html
@@ -768,6 +768,8 @@
         <! ========================================= !>
 
     </div> <script type="module" src="js/main.js"></script>
-
+<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
 </body>
 </html>
+
