--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Laundry Software</title>
     
-    <link rel="stylesheet" href="css/page-dashboard.css">
+    <link rel="stylesheet" href="css/p.css">
         
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.14/index.global.min.js'></script>
@@ -772,6 +772,7 @@
 <script>eruda.init();</script>
 </body>
 </html>
+
 
 
 
