--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Laundry Software</title>
     
-        <link rel="stylesheet" href="s.css">
+        <link rel="stylesheet" href="csss.css">
     
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     
@@ -300,4 +300,5 @@
 
 </body>
 </html>
+
 
