--- a/index.html
+++ b/index.html
@@ -1633,8 +1633,9 @@ body {
 <! =========================================== !>
 <! ============== Modal End ================== !>
 <! ========================================= !>
-
+<script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 <script>eruda.init();</script>
 </body>
 </html>
+
