--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Laundry Software</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="c.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
@@ -799,5 +799,6 @@
 <script>eruda.init();</script>
 </body>
 </html>
+
 
 
