--- a/auth.html
+++ b/auth.html
@@ -378,7 +378,10 @@ async function addDefaultProductsForUser(userId) {
         }
     }
 </script>
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
 </body>
 
 </html>
+
 
