--- a/auth.html
+++ b/auth.html
@@ -331,7 +331,8 @@ async function addDefaultProductsForUser(userId) {
         { name: "T-Shirt (Wash & Fold)", price: 30, category: "Wash & Fold", icon: "fa-tshirt" },
         { name: "Wash & Fold (per Kg)", price: 70, category: "By Weight", icon: "fa-weight-hanging" },
         { name: "Dry Clean Suit", price: 250, category: "Dry Cleaning", icon: "fa-user-secret" }
-        // ... Aur products add karein ...
+        // ... Yahaan aur products add karein ...
+        // Jaise: { name: "Blanket", price: 150, category: "Dry Cleaning", icon: "fa-blanket" }
     ];
 
     try {
@@ -383,5 +384,6 @@ async function addDefaultProductsForUser(userId) {
 </body>
 
 </html>
+
 
 
