--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 </div>
             </div>
 
-            <div class="page-actions" style="justify-content: flex-end;">
+            <div class="page-actions">
                 <button class="btn btn-secondary" id="set-opening-balance-btn">
                     <i class="fa-solid fa-store"></i>
                     <span>Set Opening Balance</span>
@@ -867,6 +867,7 @@
 <script>eruda.init();</script>
 </body>
 </html>
+
 
 
 
