--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 </button>
                 <button class="btn btn-primary" id="add-cash-out-btn">
                     <i class="fa-solid fa-minus"></i>
-                    <span>Add Cash Out (Expense)</span>
+                    <span>Add Cash Out</span>
                 </button>
             </div>
 
@@ -867,6 +867,7 @@
 <script>eruda.init();</script>
 </body>
 </html>
+
 
 
 
